Bug 1528319 - Don't create a Promise when shutting down an AudioContext. r=karlt a=pascalc

This is done in the same style as `::Suspend` and `::Resume`.

Differential Revision: https://phabricator.services.mozilla.com/D24515

--HG--
extra : source : 3a9d2f91b02203fc9e538fcfe51e2cb5cf620b29