dom/media/webaudio/AudioContext.cpp
@@ -700,7 +700,7 @@ void AudioContext::Shutdown() {
   // We don't want to touch promises if the global is going away soon.
   if (!mIsDisconnecting) {
     if (!mIsOffline) {
-      RefPtr<Promise> ignored = Close(IgnoreErrors());
+      CloseInternal(nullptr);
     }
 
     for (auto p : mPromiseGripArray) {
@@ -1123,6 +1123,12 @@ already_AddRefed<Promise> AudioContext::Close(ErrorResult& aRv) {
 
   mPromiseGripArray.AppendElement(promise);
 
+  CloseInternal(promise);
+
+  return promise.forget();
+}
+
+void AudioContext::CloseInternal(void* aPromise) {
   // This can be called when freeing a document, and the streams are dead at
   // this point, so we need extra null-checks.
   AudioNodeStream* ds = DestinationStream();
@@ -1135,11 +1141,9 @@ already_AddRefed<Promise> AudioContext::Close(ErrorResult& aRv) {
       streams = GetAllStreams();
     }
     Graph()->ApplyAudioContextOperation(ds, streams,
-                                        AudioContextOperation::Close, promise);
+                                        AudioContextOperation::Close, aPromise);
   }
   mCloseCalled = true;
-
-  return promise.forget();
 }
 
 void AudioContext::RegisterNode(AudioNode* aNode) {
